Add post liking functionality